--- a/project.properties
+++ b/project.properties
@@ -14,3 +14,4 @@
 target=Google Inc.:Google APIs:19
 android.library.reference.1=../actionbarsherlock
 android.library.reference.2=../../git/ActionBar-PullToRefresh/extras/actionbarsherlock/src/main
+android.library=true
