--- a/project.properties
+++ b/project.properties
@@ -13,5 +13,5 @@
 # Project target.
 target=Google Inc.:Google APIs:19
 android.library.reference.1=../actionbarsherlock
-android.library.reference.2=../../git/ActionBar-PullToRefresh/extras/actionbarsherlock/src/main
+android.library.reference.2=../PullToRefreshABS
 android.library=true
